# SoftSysCHorses

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  kmeans.c  main.c
cuda/: Dockerfile  build_cuda.sh  kmeans.c  kmeans.cu  point.c  point.h  test.cu  time_cuda_kmeans.sh
cuda/hemi/examples/kmeans/: Makefile  kmeans.c  point.c  single_threaded_distance.c  single_threaded_distance.cpp  time_kmeans.c
cuda/hemi/examples/kmeans/kawin/: CMakeLists.txt  parallel_distance.c  plot_results.py  random_number.py  random_number_clustur.py  scipy_k_clustering.py
cuda/hemi/src/kmeans/: kmeans.c  kmeans.h  main.c  random_clusters.csv  single_threaded_distance.h
cuda/src/kmeans/: Makefile  gpu_distance.cpp  point.c  point.h  random_clusters.py  random_clusters_100.csv  random_clusters_10000.csv  random_clusters_2000.csv  single_threaded_distance.cpp  time_all_cuda.sh  time_kmeans.c
reports/: final.md  proposal.md  report.md  update.md
src/: .~lock.random.csv#  CMakeLists.txt  kmeans.c  kmeans.h  parallel_distance.c  parallel_distance.h  parallel_distance.h.in  plot_results.py  random.csv  random_clusters.csv  random_clusters.py  random_number.py  random_number_clustur.py  single_threaded_distance.c  single_threaded_distance.h  time_kmeans.c  time_python.py
test/: parallel_distance_test.cpp
tutorials/: a.out  another_thread_tutorial.c  cud_implementation.cpp  good_example.c  kmeans.c  multi1.c  multi2.c  tutorials.md
